force-app/main/default/objects/Carrier_Version_Detail__c/Carrier_Version_Detail__c.object-meta.xml
<CustomObject>
    <label>Carrier Version Detail</label>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Carrier Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carrier Version Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>