force-app/main/default/objects/Carrier_Version_Detail__c/fields/Carrier_Play_Mode__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Play_Mode__c</fullName>
    <description>This field is populated from HI Carrier Version table, used in play mode logic for benefit transfer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Carrier Play Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>