force-app/main/default/objects/Carrier_Version_Detail__c/fields/Job_Titles_Required__c.field-meta.xml
<CustomField>
    <fullName>Job_Titles_Required__c</fullName>
    <label>Job Titles Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_or_N</valueSetName>
    </valueSet>
</CustomField>