force-app/main/default/objects/Carrier_Version_Detail__c/fields/Member_Submission_Event__c.field-meta.xml
<CustomField>
    <fullName>Member_Submission_Event__c</fullName>
    <description>This field is populated from HI Carrier Version table, used to calculate submission deadlines on the carrier order.</description>
    <label>Member Submission Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>