force-app/main/default/objects/Carrier_Version_Detail__c/fields/New_Plan_Variation_Num2__c.field-meta.xml
<CustomField>
    <fullName>New_Plan_Variation_Num2__c</fullName>
    <description>This field is populated from HI Carrier Version table, used to calculate submission deadlines on the carrier order.</description>
    <label>New Plan Variation Num2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>