force-app/main/default/objects/Carrier_Version_Detail__c/fields/nonowner_eligible_w2ees_req__c.field-meta.xml
<CustomField>
    <fullName>nonowner_eligible_w2ees_req__c</fullName>
    <label>Nonowner Eligible W2ees Req</label>
    <type>TextArea</type>
</CustomField>