force-app/main/default/objects/Carrier_Version_Detail__c/fields/Personal_LOA_Required__c.field-meta.xml
<CustomField>
    <fullName>Personal_LOA_Required__c</fullName>
    <description>This field is populated from HI Carrier Version table, used to create QA lines of coverage and displayed in TTIA, TTS, TTC templates for onboarding team.</description>
    <inlineHelpText>This field is populated from HI Carrier Version table, used to create QA lines of coverage and displayed in TTIA, TTS, TTC templates for onboarding team.</inlineHelpText>
    <label>Personal LOA Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_or_N</valueSetName>
    </valueSet>
</CustomField>