force-app/main/default/objects/Carrier_Version_Detail__c/fields/Renewal_Email_List__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Email_List__c</fullName>
    <description>This field is populated from HI Carrier Version table, used to show carrier emails in the renewal and change case page</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Renewal Email List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>