force-app/main/default/objects/Carrier_Version_Detail__c/fields/Term_Submission_Event__c.field-meta.xml
<CustomField>
    <fullName>Term_Submission_Event__c</fullName>
    <description>This field is populated from HI Carrier Version table, used to calculate submission deadlines on the carrier order.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Term Submission Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>