force-app/main/default/objects/Carrier_Version_Detail__c/fields/Updated_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Effective_Date__c</fullName>
    <description>Keep track the version effective date from Hippo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Updated Effective Date</label>
    <type>Date</type>
</CustomField>