force-app/main/default/objects/Carrier_Version_Detail__c/fields/Valid_Waivers__c.field-meta.xml
<CustomField>
    <fullName>Valid_Waivers__c</fullName>
    <description>This field is populated from HI Carrier Version table, used to calculate submission deadlines on the carrier order.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Valid Waivers</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>