force-app/main/default/objects/Carrier_Version_Detail__c/fields/Waiting_Period_Default_for_New_Hires__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period_Default_for_New_Hires__c</fullName>
    <description>This field is populated from HI Carrier Version table, used to create QA lines of coverage and displayed in TTIA, TTS, TTC templates for onboarding team.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Waiting Period Default for New Hires</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>